sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:8: error: not found: value n
    for (j <- i+1 to n) {
                     ^