sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var min = i
    
    for (j <- i+1 to n) {
      
      if (plusPetit(j,min)) {
        
        min = j
        
      }
      
    }
    
    if (min != i) {
      
      echange(i,min)
      
    }
    
  }
  
}

